results/SVCOMP/4-shot/log-ExSymExeSuzette-2024_03_18_22_20_00.txt
class Main {
  //@ requires x >= 0 && y >= 0;
  //@ ensures \result > 0 ==> \result == x || \result == y;
  //@ ensures \result <= 0 ==> \result == 0;
  public /*@ pure @*/ int method_a(int x, int y) {

    if (x > 10) return x;

    if (y > 10) return y;

    return 0;
  }

  //@ ensures z > 10 ==> \result == z + 1;
  //@ ensures z <= 10 ==> \result == z - 1;
  public /*@ pure @*/ int method_b(int z) {

    if (z > 10) return z + 1;
    else return z - 1;
  }

  //@ requires arg >= 0 && arg <= 10;
  //@ ensures \result <==> method_a(arg, 0) <= 0;
  public static /*@ pure @*/ boolean f(int arg) {

    Main ex = new Main();
    if (arg < 0 || arg > 10) return true;
    return ex.test(arg, 0);
  }

  //@ requires x >= 0 && y >= 0;
  //@ ensures \result ==> method_a(x, y) <= 0;
  public /*@ pure @*/ boolean test(int x, int y) {

    int v = method_a(x, y);

    if (v > 0) {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSuzette.java:23: error: non-static method method_a(int,int) cannot be referenced from a static context
  //@ ensures \result <==> method_a(arg, 0) <= 0;
                           ^
1 error

